--- a/src/app/views/home/home.view.css
+++ b/src/app/views/home/home.view.css
@@ -1,7 +1,7 @@
 .searchbar {
   width: 100%;
   max-width: 200px;
-  margin: 0 auto;
+  margin: 1rem auto;
   padding: 5px 20px;
   display: flex;
 }
@@ -11,10 +11,6 @@ content {
   display: flex;
   flex-direction: column;
   align-items: start;
-}
-
-.container {
-  width: 100%;
 }
 
 :host {
