--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
 body {
   margin: 0;
   min-height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
+  margin-bottom: 0;
+  /*Font Setting*/
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
 }
